--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
+---
+layout: home
+author_profile: true
+---
 
-
-<body>
-Hello World, my name is Sameera Suhail.
-</body>
-
-
-
-</html>
